--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.7'
 
     // lifecycle
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha01"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
 
     def room_version = '2.3.0'
